Fixed description to point to new github

--- a/latex/ProjectDescription.tex
+++ b/latex/ProjectDescription.tex
@@ -448,9 +448,10 @@ In order to complete this project you will need the following:
 \subsection{Downloading the Project Template}
 If you do not already have the Project Template ZIP provided, you can download the project template two other ways:
 \begin{itemize}
-\item Download directly from Github:\\ https://github.com/DaveedDomingo/gRPC-BulletinBoard-Project/archive/master.zip
-\item Clone the project template using GIT:\\ git clone https://github.com/DaveedDomingo/gRPC-BulletinBoard-Project.git
+\item Download directly from Github:\\ https://github.com/DaveedDomingo/GRPC-Bulletin-Board-Project/archive/master.zip
+\item Clone the project template using GIT:\\ git clone https://github.com/DaveedDomingo/GRPC-Bulletin-Board-Project.git
 \end{itemize} 
+The Project Template would be the folder labeled Project-Template
 
 \subsection{Importing the Project into Eclipse}
 To import the project into Eclipse, carry out the following steps:
@@ -473,7 +474,7 @@ Although it is recommended, \textbf{it is not necessary to use the Eclipse IDE}.
 The following is the bare structure of the project template: \\
 
 \dirtree{%
-.1 gRPC-BulletinBoard-Project.
+.1 Project-Template.
 .2 src.
 .3 main.
 .4 java.
