--- a/latex/ProjectDescription.tex
+++ b/latex/ProjectDescription.tex
@@ -451,7 +451,7 @@ If you do not already have the Project Template ZIP provided, you can download t
 \item Download directly from Github:\\ https://github.com/DaveedDomingo/GRPC-Bulletin-Board-Project/archive/master.zip
 \item Clone the project template using GIT:\\ git clone https://github.com/DaveedDomingo/GRPC-Bulletin-Board-Project.git
 \end{itemize} 
-The Project Template would be the folder labeled Project-Template
+The Project Template would be the folder labeled project-template
 
 \subsection{Importing the Project into Eclipse}
 To import the project into Eclipse, carry out the following steps:
@@ -474,7 +474,7 @@ Although it is recommended, \textbf{it is not necessary to use the Eclipse IDE}.
 The following is the bare structure of the project template: \\
 
 \dirtree{%
-.1 Project-Template.
+.1 project-template.
 .2 src.
 .3 main.
 .4 java.
